--- a/app/globals.css
+++ b/app/globals.css
@@ -50,6 +50,12 @@
   font-weight: 700;
   font-style: normal;
 }
+@font-face {
+  font-family: 'Italianno';
+  src: url('/fonts/Italianno-Regular.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
 
 
 
@@ -68,6 +74,7 @@
     transform: translateX(-100%);
   }
 }
+
 
 .logo-container {
   display: flex;
@@ -106,3 +113,19 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+#home-bienvenido-text {
+  max-width: 1630px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 240px 0 0 0;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.animate-linea {
+  overflow: hidden;
+}
+
