--- a/app/globals.css
+++ b/app/globals.css
@@ -134,3 +134,13 @@ body {
   overflow: hidden;
 }
 
+/* styles.css or globals.css */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none;    /* Firefox */
+}
+
+
